# fossmerge

./: Dockerfile  Makefile  README.rst  local_ubuntu_docker.sh  pyproject.toml
.github/workflows/: fossmergetest.yml
docs-source/: conf.py  fossmerge.drawio  fossmerge.rst  index.rst
fossmerge/: __init__.py  __main__.py  analyze_clixml_file.py  analyze_docx_file.py  exceptions.py  fossmerge_cli.py
tests/: conftest.py  test_analyze_report_file.py  test_fossmerge.py  test_fossmerge_big_files.py
tests/files/: 2019-10-16_CLIXML_zlib_1--1.2.11.dfsg-1-debian10-combined.tar.bz2_2019-10-16_06_29_02.xml  2019-10-16_zlib_1--1.2.11.dfsg-1-debian10-combined.tar.bz2_clearing_report_Wed_Oct_16_10_2019_06_28_46.docx  2020-01-14_e2fsprogs_1.44.5-1-debian10-combined.tar.bz2_clearing_report_Mon_Jan_13_01_2020_07_27_52.docx
