[tool.poetry]
name = "fossmerge"
version = "0.1.0"
description = ""
authors = ["Thomas Setz <thomas@setz.de>"]

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"
bs4 = "^0.0.1"
xmltodict = "^0.12.0"
lxml = "^4.6.3"
pandoc = "^1.1.0"
deepdiff = "^5.5.0"
sphinx-autoapi = "^1.8.4"

[tool.poetry.dev-dependencies]
flake8 = ">=3.7.8"
sphinx = ">=2.2.0"
black = "^19.10b0"
coverage = "^5.1"
codecov = "^2.0.22"
pyflakes = "^2.2.0"
pytest = "^5.4.3"
isort = "^5.7.0"

[tool.poetry.scripts]
 fossmerge = "fossmerge.fossmerge_cli:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
